--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 MONGO_URI=mongodb+srv://razvanpelinari_db_user:Bugmafia23@foxyinc.5ouofpg.mongodb.net/foxydb?retryWrites=true&w=majority&appName=FoxyInc
 PORT=8000
-JWT_SECRET=N7v!4qR@8zL$1kX#pF^9bG*2sT&wY6mU
+JWT_SECRET=superstrongrandomstring
